--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -874,6 +874,8 @@ sudo groupadd appgroup
 tar -jxvf .tar.bz2
 # 解压缩 tar.gz 格式的压缩文件到 /home 目录
 tar -zxvf .tar.gz -C /home
+# 解压缩 tar.xz
+tar -xvJf .tar.xz
 
 # 压缩与解压的唯一区别就是解压参数为-x，压缩参数为-c
 # 将当前目录下的所有文件压缩
@@ -9948,17 +9950,20 @@ select user,host from mysql.user;
 # grant option：允许该用户在登录数据库时，能给其它用户进行授权操作
 # mysql 8 不支持该写法
 grant all privileges on *.* to 'root'@'%' identified by 'mysql' with grant option;
-# mysql 8 的写法
+# mysql 8 的写法，需要先使用 alter user 创建相同'username'@'ip'才能执行
+# 否则会报错 ERROR 1410 (42000): You are not allowed to create a user with GRANT
 grant all privileges on *.* to 'root'@'%' with grant option;
+grant all privileges on *.* to 'root'@'192.168.31.%' with grant option;
+grant all privileges on *.* to 'root'@'1.12.251.106' with grant option;
 # 授权的账号需要能访问所有主机才能给其它账号授权，否则会报错
 
-# 授权用户 root 在所有 ip 登录
-update user set host='%' where user='root';
+# 更新用户允许登录 mysql 的主机
+update user set host='%' where user='root' and host = '%';
 
 # 新建数据库用户，用户允许在ip(localhost)登陆，(允许所有ip则替换为%)
 create user 'username'@'ip' identified by 'password';
 
-# 修改密码
+# 修改密码\创建用户
 alter user 'root'@'localhost' identified by 'mysql';
 
 # 删除用户并删除授权
@@ -10036,11 +10041,11 @@ user=mysql
 # 为 mysql 客户端程序和服务器之间的本地通讯指定一个套接字文件
 socket=/opt/mysql/my-temp/mysql.sock
 # 设置 mysql 的安装目录
-basedir=/opt/mysql/mysql/
+basedir=/opt/mysql/mysql
 # 设置 mysql 数据库的数据的存放目录
-datadir=/opt/mysql/my-data/
+datadir=/opt/mysql/my-data
 #MySQL存放临时文件的目录
-tmpdir=/opt/mysql/my-temp/
+tmpdir=/opt/mysql/my-temp
 #pid文件所在目录
 pid-file=/opt/mysql/my-temp/mysql.pid
 # 允许最大连接数
@@ -10054,10 +10059,24 @@ default-storage-engine=INNODB
 # 默认使用“mysql_native_password”插件认证
 default_authentication_plugin=mysql_native_password
 lc-messages=en_US
-lc-messages-dir=/opt/mysql/my-share/
+lc-messages-dir=/opt/mysql/my-share
 
 [mysqld_safe]
 log-error = /var/logs/mysql/logs/.err
+```
+
+
+
+##### 更新启动文件
+
+`/opt/mysql/mysql/support-files/mysql.server`
+
+```properties
+# basedir=
+# datadir=
+# 更新这两个配置为:
+basedir='/opt/mysql/mysql'
+datadir='/opt/mysql/mysql'
 ```
 
 
@@ -10111,6 +10130,7 @@ sudo update-rc.d mysqld defaults
 sudo service mysqld start
 sudo service mysqld stop
 sudo service mysqld restart
+sudo service mysqld status
 #或
 sudo systemctl start mysqld.service
 sudo systemctl stop mysqld.service
@@ -16135,7 +16155,7 @@ conf=$my_conf
 
 # parse_server_arguments `$print_defaults $extra_args --mysqld mysql.server`
 parse_server_arguments `$print_defaults -c $my_conf --mysqld mysql.server`
-# $bindir/mysqld_safe --datadir="$datadir" --pid-file="$mariadbd_pid_file_path" "$@" & 
+# $:wq/mysqld_safe --datadir="$datadir" --pid-file="$mariadbd_pid_file_path" "$@" & 
 $bindir/mysqld_safe --defaults-file="$my_conf" "$@" &
 ```
 
