--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -27005,7 +27005,7 @@ ss -apnl | grep 6379
 
 ### 安装
 
-先从 redis [官网](http://download.redis.io/)下载 tar.gz 包
+先从 redis [官网](https://redis.io/download/)下载 tar.gz 包
 
 ```sh
 # 先从 redis [官网](https://redis.io//)下载 tar.gz 包
@@ -27231,7 +27231,7 @@ dir "/opt/data/redis/sentinel"
 sentinel monitor cluster_master 192.168.31.158 6379 2
 sentinel auth-pass cluster_master 123456
 # 判断master主观下线时间，默认30s
-sentinel down-after-milliseconds cluster_master 30000                 
+sentinel down-after-milliseconds cluster_master 30000
 ```
 
 
