--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -1226,8 +1226,8 @@ sudo groupadd -r apps
 sudo useradd -r -g apps -s /bin/false frp
 
 sudo mkdir /var/log/frp
-sudo chmod -R 754 /opt/apps/frp
-sudo chmod -R 754 /var/log/frp
+sudo chmod -R 755 /opt/apps/frp
+sudo chmod -R 755 /var/log/frp
 sudo chown -R frp:root /opt/apps/frp
 sudo chown -R frp:root /var/log/frp
 ```
@@ -26978,71 +26978,34 @@ public class KafkaSpringDemoController {
 
 # Redis
 
-## 操作
-
-```sh
-# 启动redis
-/opt/latest/redis/bin/redis-server /opt/latest/redis/conf/redis.conf 
-# 使用redis-cli客户端检测连接
-# 需要输入中文时加参数 --raw
-# -h:主机
-# -p:端口
-# -a:密码
-redis-cli -h localhost -p 6379 -a 123456
-# 停止redis
-redis-cli -a 123456 shutdown
-# 或
-kill -9 PID
-# 检测后台进程是否存在
-ps -ef |grep redis
-# 检测6379端口是否在监听
-ss -apnl | grep 6379
-```
-
-
-
-## 单机
+## 安装配置部署管理
 
 ### 安装
 
 先从 redis [官网](https://redis.io/download/)下载 tar.gz 包
 
-```sh
+```shell
 # 先从 redis [官网](https://redis.io//)下载 tar.gz 包
 wget -c https://download.redis.io/releases/redis-6.0.8.tar.gz
-tar -zxvf redis-6.0.8.tar.gz -C /opt/install/
-cd /opt/install/redis-6.0.8
+tar -zxvf redis-6.0.8.tar.gz -C /opt/apps/
+sudo mv /opt/apps/redis-6.0.8 /opt/apps/redis
+cd /opt/apps/redis
 # 编译
 sudo make
 # 安装
 cd src
-sudo make install PREFIX=/opt/install/redis-6.0.8
+sudo make install PREFIX=/opt/apps/redis
 # 如果出现 /bin/sh: 1: pkg-config: not found
 # 则 sudo apt install pkg-config
-
-# 配置环境变量
-ln -s /opt/install/redis-6.0.8 /opt/latest/redis
-sudo vim /etc/profile
-# 添加
-#export REDIS_HOME="/opt/latest/redis"
-#export PATH=$PATH:$REDIS_HOME/bin
-source /etc/profile
-```
-
-### 卸载
-
-```sh
-rm -r /opt/install/redis-6.0.8
-rm /opt/latest/redis
-# 删除/etc/profile里的redis配置
 ```
 
 
 
 ### 配置
 
+conf/redis.conf
+
 ```properties
-# vim /opt/latest/redis/conf/redis.conf
 # 命令行模式搜索 :/关键词
 # 配置redis为后台启动
 daemonize yes
@@ -27058,16 +27021,65 @@ dir /opt/data/redis/
 # 在dir目录生成appendonly.aof文件，将每一次写操作请求都追加到appendonly.aof 文件中
 appendonly yes
 # 日志文件
-logfile "/var/log/redis/redis.log"
+logfile /var/log/redis/redis.log
+# pid 文件
+pidfile /opt/temp/redis/redis.pid
 ```
 
-将redis加入到开机启动
+
+
+### 创建用户（组）
+
+```shell
+sudo groupadd -r apps
+sudo useradd -r -g apps -s /bin/false redis
+
+sudo mkdir /opt/data/redis
+sudo mkdir /opt/temp/redis
+sudo mkdir /var/log/redis
+sudo chown -R redis:root /opt/apps/redis
+sudo chown -R redis:root /opt/data/redis
+sudo chown -R redis:root /opt/temp/redis
+sudo chown -R redis:root /var/log/redis
+```
+
+
+
+### 服务管理
+
+手动
 
 ```sh
-# 在里面添加内容：/opt/latest/redis/bin/redis-server /opt/latest/redis/conf/redis.conf 
-# 意思就是开机调用这段开启redis的命令
-vim /etc/rc.local
+# 启动redis
+redis-server /opt/apps/redis/conf/redis.conf 
+# 使用redis-cli客户端检测连接
+# 需要输入中文时加参数 --raw
+# -h:主机
+# -p:端口
+# -a:密码
+redis-cli -h localhost -p 6379 --raw
+$ auth xxxxxx
+# 停止redis
+redis-cli -a 123456 shutdown
+# 或
+kill -9 PID
+# 检测后台进程是否存在
+ps -ef |grep redis
+# 检测6379端口是否在监听
+ss -apnl | grep 6379
 ```
+
+
+
+编写[脚本](../files/scripts/server/redis.server)文件放在 base_dir 目录下 `/opt/apps/redis/redis.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+
+
+
+Windows 连接 Redis 没有官方的工具
+
+[Windows 非官方连接 Redis 工具](https://github.com/tporadowski/redis/releases)
 
 
 
