--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -29560,6 +29560,167 @@ git push <远程主机名> <本地分支名>
 
 ## 安装配置部署管理
 
+### 安装
+
+[Elasticsearch详解与安装 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/640397546)
+
+[Download Elasticsearch](https://www.elastic.co/cn/downloads/elasticsearch)
+
+```shell
+sudo wget -c https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-8.10.0-linux-x86_64.tar.gz -O /home/young/packages/elasticsearch-8.10.0-linux-x86_64.tar.gz
+
+sudo tar -zxvf /home/young/packages/elasticsearch-8.10.0-linux-x86_64.tar.gz -C /opt/apps
+
+sudo mv /opt/apps/elasticsearch-8.10.0 /opt/apps/elasticsearch
+```
+
+
+
+### 配置
+
+[Elasticsearch：配置选项_es network.host 配置_Elastic 中国社区官方博客的博客-CSDN博客](https://blog.csdn.net/UbuntuTouch/article/details/129736026)
+
+config/elasticsearch.yml
+
+```properties
+# Use a descriptive name for your cluster:
+# 同一个集群下的节点集群名要一致
+cluster.name: es-cluster
+#
+# Use a descriptive name for the node:
+#
+node.name: es-node-101
+#
+# Path to directory where to store the data (separate multiple locations by comma):
+#
+path.data: /opt/data/elasticsearch
+#
+# Path to log files:
+#
+path.logs: /var/log/elasticsearch
+#
+# 插件目录
+#
+# path.plugins: /opt/apps/elasticsearch/plugins
+
+# By default Elasticsearch is only accessible on localhost. Set a different
+# address here to expose this node on the network:
+#
+# 局域网内访问
+# network.host: 192.168.0.1
+# 所有 IP 都能访问
+network.host: 0.0.0.0
+#
+# By default Elasticsearch listens for HTTP traffic on the first free port it
+# finds starting at 9200. Set a specific HTTP port here:
+#
+http.port: 9200
+#
+# Pass an initial list of hosts to perform discovery when this node is started:
+# The default list of hosts is ["127.0.0.1", "[::1]"]
+# 其它节点地址
+discovery.seed_hosts: ["192.168.31.102", "192.168.31.103"]
+#
+# Bootstrap the cluster using an initial set of master-eligible nodes:
+# masetr 候选者
+cluster.initial_master_nodes: ["es-node-101", "es-node-102", "es-node-103"]
+
+# https://blog.51cto.com/u_10950710/6663023
+xpack.security.enabled: false
+
+```
+
+
+
+config/jvm.options
+
+```properties
+# specify an alternative path for JVM fatal error logs
+# -XX:ErrorFile=logs/hs_err_pid%p.log
+# 改为
+-XX:ErrorFile=/var/log/elasticsearch/hs_err_pid%p.log
+
+## GC logging
+# -Xlog:gc*,gc+age=trace,safepoint:file=logs/gc.log:utctime,level,pid,tags:filecount=32,filesize=64m
+# 改为
+-Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,level,pid,tags:filecount=32,filesize=64m
+```
+
+
+
+config/jvm.options.d/my.jvm.options
+
+```properties
+-Xms1g
+-Xmx1g
+```
+
+
+
+sudo vim /etc/sysctl.conf
+
+vm.max_map_count=262144
+
+
+
+
+
+最小节点数
+
+这个配置就是告诉 Elasticsearch 当没有足够 master 候选节点的时候，就不要进行 master 节点选举，等 master 候选节点足够了才进行选举。
+
+master 候选节点个数 / 2 + 1 
+
+PUT /_cluster/settings
+{
+    "persistent" : {
+        "discovery.zen.minimum_master_nodes" : 2
+    }
+}
+
+
+
+### 创建用户（组）
+
+```shell
+sudo groupadd -r apps
+sudo useradd -r -g apps -s /bin/false elasticsearch
+
+sudo mkdir /opt/data/elasticsearch
+sudo mkdir /var/log/elasticsearch
+sudo chown -R elasticsearch:root /opt/apps/elasticsearch
+sudo chown -R elasticsearch:root /opt/data/elasticsearch
+sudo chown -R elasticsearch:root /var/log/elasticsearch
+```
+
+
+
+### 服务管理
+
+手动
+
+```sh
+# 启动 elasticsearch
+sudo -u elasticsearch bin/elasticsearch
+kill -9 PID
+# 检测后台进程是否存在
+ps -ef |grep elasticsearch
+```
+
+
+
+编写[脚本](../files/scripts/server/elasticsearch.server)文件放在 base_dir 目录下 `/opt/apps/elasticsearch/elasticsearch.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+
+
+
+
+
+## 集群
+
+
+
 
 
 ## 应用场景
@@ -29613,7 +29774,7 @@ Lucene 的缺点：
 
 官网地址: https://www.elastic.co/cn/
 
-目前最新的版本是: 7.12.1
+目前最新的版本是: 8.10.0
 
 相比与 Lucene，ElasticSearch 具备下列优势：
 
@@ -29757,7 +29918,7 @@ Elasticsearch提供了索引模板，模版主要定义如下：
       // 自定义的分析器
       "analysis": {...},
       // 主分片的个数
-      "number_of_shards": "32",
+      "number_of_shards": "3",
       // 主分片的拷贝分片个数
       "number_of_replicas": "1",
       // 刷新时间
