--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -647,150 +647,37 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 
 ### 101
 
-#### 已安装软件
-
-```shell
-# GCC
-# vim
-# frp
-```
-
-
-
-#### frp
-
-```properties
-[common]
-# 公网 ip 地址，vps
-server_addr = 1.12.251.106
-# frp 服务的 bind_port
-server_port = 10001
-token = token
-log_file = /var/log/frp/frpc.log
-log_level = info
-log_max_days = 3
-
-[ssh-101]
-type = tcp
-local_ip = 127.0.0.1
-local_port = 22
-remote_port = 11022
-```
+| APP           | Version | Port                                                  | Nginx             | Nginx 负载均衡 | 1.12.251.106         |
+| ------------- | ------- | ----------------------------------------------------- | ----------------- | -------------- | -------------------- |
+| ssh           |         | 22                                                    |                   |                | 11022                |
+| MySql         | 8.0.31  | 3306                                                  |                   |                | 11006                |
+| Redis         | 7.2.0   | 6379                                                  |                   |                | 11379                |
+| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                 |                   |                | 11200, 11300         |
+| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server] | 8848，9848， 9849 | 是             | 11848, 11948,  11949 |
+| Sentinel      | 1.8.6   | 8050[dashboard], 8719[api-server]                     |                   |                | 11050, 11719         |
+| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                         | 7091, 8091        | 是             | 11791, 11891         |
 
 
 
 ### 102
 
-#### 已安装软件
-
-```shell
-# GCC
-# vim
-# frp
-```
-
-
-
-#### frp
-
-```properties
-[common]
-# 公网 ip 地址，vps
-server_addr = 1.12.251.106
-# frp 服务的 bind_port
-server_port = 10001
-token = token
-log_file = /var/log/frp/frpc.log
-log_level = info
-log_max_days = 3
-
-[ssh-102]
-type = tcp
-local_ip = 127.0.0.1
-local_port = 22
-remote_port = 12022
-```
+| APP           | Version | Port                                                  | 1.12.251.106 |
+| ------------- | ------- | ----------------------------------------------------- | ------------ |
+| ssh           |         | 22                                                    | 12022        |
+| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                 | 12200, 12300 |
+| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server] |              |
+| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                         |              |
 
 
 
 ### 103
 
-#### 已安装软件
-
-```shell
-# GCC
-# vim
-# frp
-```
-
-
-
-#### frp
-
-```properties
-[common]
-# 公网 ip 地址，vps
-server_addr = 1.12.251.106
-# frp 服务的 bind_port
-server_port = 10001
-token = token
-log_file = /var/log/frp/frpc.log
-log_level = info
-log_max_days = 3
-
-[ssh-103]
-type = tcp
-local_ip = 127.0.0.1
-local_port = 22
-remote_port = 13022
-```
-
-
-
-### 1.12.251.106
-
-已安装软件
-
-```shell
-# vim
-# frp
-```
-
-
-
-frp
-
-```properties
-[common]
-# 于客户端和服务端连接的端口
-bind_port = 10001
-authentication_timeout = 0
-# 服务端 web 页面的端口，如 7500 端口，在配置完成服务启动后可以通过浏览器访问 x.x.x.x:7500 （其中x.x.x.x为公网服务的IP）查看frp服务运行信息
-dashboard_port = 10002
-
-# 服务端加了 客户端必须添加，也可以都不设置
-token = token 
-
-dashboard_user = frp
-dashboard_pwd = Senna&frp@P1
-# 可自定义，用于反向代理 HTTP 主机时使用
-vhost_http_port = 10003
-# 可自定义，用于反向代理 HTTPS 主机时使用
-vhost_https_port = 10004
-
-# 子域名
-# subdomain_host = frp.com 
-
-# 自定义404 页面，绝对路径
-#custom_404_page = /frp/404.html 
-# 允许客户端绑定的端口，不设置则不限制
-allow_ports = 10000-50000
-# 端口代理数量
-max_pool_count = 100
-log_file = /var/log/frp/frps.log
-log_level = info
-log_max_days = 3
-```
+| APP           | Version | Port                                                  | 1.12.251.106 |
+| ------------- | ------- | ----------------------------------------------------- | ------------ |
+| ssh           |         | 22                                                    | 13022        |
+| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                 | 13200, 13300 |
+| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server] |              |
+| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                         |              |
 
 
 
@@ -29591,9 +29478,6 @@ sudo mv /opt/apps/elasticsearch-8.10.0 /opt/apps/elasticsearch
 config/elasticsearch.yml
 
 ```properties
-# Use a descriptive name for your cluster:
-# 同一个集群下的节点集群名要一致
-cluster.name: es-cluster
 #
 # Use a descriptive name for the node:
 #
@@ -29624,16 +29508,8 @@ network.host: 0.0.0.0
 #
 http.port: 9200
 #
-# Pass an initial list of hosts to perform discovery when this node is started:
-# The default list of hosts is ["127.0.0.1", "[::1]"]
-# 其它节点地址
-discovery.seed_hosts: ["192.168.31.102", "192.168.31.103"]
-#
-# Bootstrap the cluster using an initial set of master-eligible nodes:
-# masetr 候选者
-cluster.initial_master_nodes: ["es-node-101", "es-node-102", "es-node-103"]
-
 # https://blog.51cto.com/u_10950710/6663023
+#
 xpack.security.enabled: false
 
 ```
@@ -29668,23 +29544,6 @@ config/jvm.options.d/my.jvm.options
 sudo vim /etc/sysctl.conf
 
 vm.max_map_count=262144
-
-
-
-
-
-最小节点数
-
-这个配置就是告诉 Elasticsearch 当没有足够 master 候选节点的时候，就不要进行 master 节点选举，等 master 候选节点足够了才进行选举。
-
-master 候选节点个数 / 2 + 1 
-
-PUT /_cluster/settings
-{
-    "persistent" : {
-        "discovery.zen.minimum_master_nodes" : 2
-    }
-}
 
 
 
@@ -29723,6 +29582,45 @@ ps -ef |grep elasticsearch
 
 
 
+#### 集群
+
+单机配置加上以下配置
+
+config/elasticsearch.yml
+
+```properties
+# Use a descriptive name for your cluster:
+# 同一个集群下的节点集群名要一致
+cluster.name: es-cluster
+#
+# Pass an initial list of hosts to perform discovery when this node is started:
+# The default list of hosts is ["127.0.0.1", "[::1]"]
+# 其它节点地址
+discovery.seed_hosts: ["192.168.31.102", "192.168.31.103"]
+#
+# Bootstrap the cluster using an initial set of master-eligible nodes:
+# masetr 候选者
+cluster.initial_master_nodes: ["es-node-101", "es-node-102", "es-node-103"]
+
+```
+
+
+
+最小节点数
+
+这个配置就是告诉 Elasticsearch 当没有足够 master 候选节点的时候，就不要进行 master 节点选举，等 master 候选节点足够了才进行选举。
+
+master 候选节点个数 / 2 + 1 
+
+PUT /_cluster/settings
+{
+    "persistent" : {
+        "discovery.zen.minimum_master_nodes" : 2
+    }
+}
+
+
+
 ### IK 分词器
 
 #### 安装
@@ -29756,12 +29654,6 @@ sudo rm elasticsearch-analysis-ik-8.10.0.zip
 
 sudo service elasticsearch restart
 ```
-
-
-
-
-
-## 集群
 
 
 
@@ -30279,6 +30171,8 @@ DELETE /索引库名
 
 
 ## SpringBoot 整合 ES
+
+
 
 
 
