--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -25494,19 +25494,23 @@ RabbitMQ 提供了 6 种工作模式：简单模式、work queues、Publish/Subs
 
 
 
-### 操作
+### 安装配置部署
 
-### 单机
+[官网](https://www.rabbitmq.com)
 
-Erlang与RabbitMQ的版本对照https://www.rabbitmq.com/which-erlang.html
+[Erlang 与 RabbitMQ 的版本对照](https://www.rabbitmq.com/which-erlang.html)
 
-#### 安装 erlang
+#### 安装
+
+
+
+##### 安装 Erlang
 
 ```shell
 # 安装erlang
-# erlang deb包下载官网https://www.erlang-solutions.com/resources/download.html
-wget -c http://packages.erlang-solutions.com/erlang/debian/pool/esl-erlang_23.0-1~debian~buster_amd64.deb
-# 如果出现依赖不满足则运行sudo apt -f install 后再安装
+# erlang deb包下载官网 https://www.erlang-solutions.com/resources/download.html
+wget -c http://packages.erlang-solutions.com/erlang/debian/pool/esl-erlang_25.3-2~debian~bullseye_amd64.deb
+# 如果出现依赖不满足则运行 sudo apt -f install 后再安装
 # 卸载 sudo dpkg -r package_name
 sudo dpkg -i esl-erlang_23.0-1~debian~buster_amd64.deb
 # 查看信息
@@ -25517,44 +25521,42 @@ Eshell V11.0  (abort with ^G)
 1>
 ```
 
-#### 安装RabbitMQ
+
+
+##### 安装 RabbitMQ
 
 ```shell
 # 从这里https://github.com/rabbitmq/rabbitmq-server/tags查看下载链接
-wget -c https://github.com/rabbitmq/rabbitmq-server/releases/download/v3.8.8/rabbitmq-server-generic-unix-3.8.8.tar.xz
+wget -c https://github.com/rabbitmq/rabbitmq-server/releases/download/v3.12.6/rabbitmq-server-generic-unix-3.12.6.tar.xz
 # 解压
-tar -xvJf rabbitmq-server-generic-unix-3.8.8.tar.xz -C /opt/install/
-ln -s /opt/install/rabbitmq_server-3.8.8 /opt/latest/rabbitmq
-# 配置环境 /etc/profil添加下面配置
-export RABBITMQ_HOME="/opt/latest/rabbitmq"
+sudo tar -xvJf rabbitmq-server-generic-unix-3.12.6.tar.xz -C /opt/apps/
+sudo mv /opt/apps/rabbitmq_server-3.12.6 /opt/apps/rabbitmq
+# 配置环境 /etc/profile 添加下面配置
+export RABBITMQ_HOME="/opt/apps/rabbitmq"
 export PATH=$PATH:$RABBITMQ_HOME/sbin
 source /etc/profile
 
 # 配置可视化监控管理后台插件
+su -
 rabbitmq-plugins enable rabbitmq_management
-The following plugins have been configured:
-  rabbitmq_management
-  rabbitmq_management_agent
-  rabbitmq_web_dispatch
-Applying plugin configuration to rabbit@server-1...
-The following plugins have been enabled:
-  rabbitmq_management
-  rabbitmq_management_agent
-  rabbitmq_web_dispatch
-
-set 3 plugins.
-
-# 配置
-# 默认rabbitmq是没有配置文件的，需要去官方github上，复制一个配置文件模版过来，最新的3.7.0以上的版本可以使
-# 用新的key-value形式的配置文件rabbitmq.conf，和原来erlang格式的advanced.config相结合，
-# 解决一下key-value形式不好定义的配置。
-# github地址：https://github.com/rabbitmq/rabbitmq-server/tree/master/docs
-# rabbitmq.conf.example
-# 配置文件放在 /opt/latest/rabbitmq/etc/rabbitmq/ 下
+# 输出
+# rabbitmq_management
+# The following plugins have been configured:
+#   rabbitmq_management
+#   rabbitmq_management_agent
+#   rabbitmq_web_dispatch
+# Applying plugin configuration to rabbit@server01...
+# The following plugins have been enabled:
+#   rabbitmq_management
+#   rabbitmq_management_agent
+#   rabbitmq_web_dispatch
+# 
+# set 3 plugins.
+# Offline change; changes will take effect at broker restart.
 
 # 后台启动
-# 启动之后打开端口15672即可访问web界面
-# 使用默认的用户 guest / guest （此也为管理员用户）登陆，会发现无法登陆，报错：User can only log in via localhost。那是因为默认是限制了guest用户只能在本机登陆，也就是只能登陆localhost:15672。可以通过修改配置文件rabbitmq.conf，取消这个限制： loopback_users这个项就是控制访问的，如果只是取消guest用户的话，只需要loopback_users.guest = false 即可。
+# 启动之后打开端口 5672 即可访问 WEB 界面
+# 使用默认的用户 guest / guest （此也为管理员用户）登陆，会发现无法登陆，报错：User can only log in via localhost。那是因为默认是限制了guest用户只能在本机登陆，也就是只能登陆 localhost:5672。可以通过修改配置文件rabbitmq.conf，取消这个限制： loopback_users 这个项就是控制访问的，如果只是取消 guest 用户的话，只需要 loopback_users.guest = false 即可。
 rabbitmq-server -detached
 
 # 添加用户
@@ -25567,6 +25569,57 @@ rabbitmqctl set_user_tags admin administrator
 rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 # 查看用户权限列表
 rabbitmqctl list_permissions
+```
+
+
+
+##### 配置
+
+etc/rabbitmq/rabbitmq.conf
+
+默认 rabbitmq 是没有配置文件的，需要去官方 github上，复制一个配置文件模版过来。
+
+[rabbitmq.conf.example.3.12.6](../files/config/rabbitmq.conf.example)
+
+[rabbitmq.conf.example](https://github.com/rabbitmq/rabbitmq-server/blob/main/deps/rabbit/docs/rabbitmq.conf.example)
+
+
+
+##### 创建用户（组）
+
+```shell
+sudo groupadd -r apps
+sudo useradd -r -g apps -s /bin/false rabbitmq
+
+sudo mkdir /var/log/rabbitmq/
+sudo chown -R rabbitmq:root /opt/apps/rabbitmq
+sudo chown -R rabbitmq:root /var/log/rabbitmq
+```
+
+
+
+##### 服务管理
+
+手动
+
+```shell
+# 将 rabbitmq-server 进程放入系统进程中
+sudo ln -s /opt/apps/rabbitmq/sbin/rabbitmq-server /etc/init.d/rabbitmq-server
+sudo ln -s /opt/apps/rabbitmq/sbin/rabbitmq-env /etc/init.d/rabbitmq-env
+sudo ln -s /opt/apps/rabbitmq/sbin/rabbitmq-rel /etc/init.d/rabbitmq-rel
+# 注册服务
+sudo update-rc.d rabbitmq-server defaults
+
+# 启动、停止、重新启动 rabbitmq-server 服务
+sudo service rabbitmq-server start
+sudo service rabbitmq-server stop
+sudo service rabbitmq-server restart
+sudo service rabbitmq-server status
+# 或
+sudo systemctl start rabbitmq-server.service
+sudo systemctl stop rabbitmq-server.service
+sudo systemctl restart rabbitmq-server.service
+sudo systemctl status rabbitmq-server.service
 ```
 
 
