--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -865,6 +865,8 @@ curl -H "Content-Type: application/json" -X POST -d @jsoninfo.json URL
 # 常用命令
 # 使用 username 账号登录 ip 主机
 ssh username@ip
+# 指定端口，默认 22
+ssh username@ip -p port
 ```
 
 
@@ -25494,7 +25496,7 @@ RabbitMQ 提供了 6 种工作模式：简单模式、work queues、Publish/Subs
 
 
 
-### 安装配置部署
+### 安装配置部署管理
 
 [官网](https://www.rabbitmq.com)
 
@@ -25573,7 +25575,7 @@ rabbitmqctl list_permissions
 
 
 
-##### 配置
+#### 配置
 
 etc/rabbitmq/rabbitmq.conf
 
@@ -25585,22 +25587,32 @@ etc/rabbitmq/rabbitmq.conf
 
 
 
-##### 创建用户（组）
+#### 创建用户（组）
 
 ```shell
 sudo groupadd -r apps
 sudo useradd -r -g apps -s /bin/false rabbitmq
 
 sudo mkdir /var/log/rabbitmq/
+sudo mkdir /home/rabbitmq/
 sudo chown -R rabbitmq:root /opt/apps/rabbitmq
 sudo chown -R rabbitmq:root /var/log/rabbitmq
+sudo chown -R rabbitmq:root /home/rabbitmq/
 ```
 
 
 
-##### 服务管理
+#### 服务管理
 
-手动
+自动
+
+编写[脚本](../files/scripts/server/rabbitmq.server)文件放在 base_dir 目录下 `/opt/apps/rabbitmq/rabbitmq.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+
+
+
+启动之后在浏览器打开[链接](http://localhost:8848/nacos)，默认用户名/密码是 nacos/nacos 。
 
 ```shell
 # 将 rabbitmq-server 进程放入系统进程中
@@ -29537,6 +29549,24 @@ git push <远程主机名> <本地分支名>
    合并冲突 如果不能自动合并就手动合并。自己打开有冲突的文件并修改。冲突文件的基本格式是<<<<<<<到=======是在当前分支合并之前的文件内容，=======到>>>>>>> 是在其它分支下修改的内容需要在这个两个版本中选择一个，然后把标记符号也要一起删除。手动解决完冲突就可以push到远端分支了。
 4. git push origin master
 5. git branch -d tmp
+
+
+
+#### 远程覆盖本地
+
+```shell
+git fetch --all
+git reset --hard  origin master
+git pull  origin 
+```
+
+
+
+#### 本地覆盖远程
+
+```shell
+git push --force origin master
+```
 
 
 
