--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -29556,8 +29556,8 @@ git push <远程主机名> <本地分支名>
 
 ```shell
 git fetch --all
-git reset --hard  origin master
-git pull  origin 
+git reset --hard origin/develop
+git pull 
 ```
 
 
