--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -25555,22 +25555,6 @@ rabbitmq-plugins enable rabbitmq_management
 # 
 # set 3 plugins.
 # Offline change; changes will take effect at broker restart.
-
-# 后台启动
-# 启动之后打开端口 5672 即可访问 WEB 界面
-# 使用默认的用户 guest / guest （此也为管理员用户）登陆，会发现无法登陆，报错：User can only log in via localhost。那是因为默认是限制了guest用户只能在本机登陆，也就是只能登陆 localhost:5672。可以通过修改配置文件rabbitmq.conf，取消这个限制： loopback_users 这个项就是控制访问的，如果只是取消 guest 用户的话，只需要 loopback_users.guest = false 即可。
-rabbitmq-server -detached
-
-# 添加用户
-rabbitmqctl start_app
-# 用户名是admin,密码是123456
-rabbitmqctl add_user admin 123456 
-# 用户设置为管理员
-rabbitmqctl set_user_tags admin administrator
-# 设置读写权限
-rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
-# 查看用户权限列表
-rabbitmqctl list_permissions
 ```
 
 
@@ -25587,6 +25571,22 @@ etc/rabbitmq/rabbitmq.conf
 
 
 
+```properties
+## Uncomment the following line if you want to allow access to the
+## guest user from anywhere on the network.
+loopback_users.guest = false
+
+## Log all requests to the management HTTP API to a file.
+##
+management.http_log_dir = /var/log/rabbitmq
+
+## Log directory, taken from the RABBITMQ_LOG_BASE env variable by default.
+##
+log.dir = /var/log/rabbitmq
+```
+
+
+
 #### 创建用户（组）
 
 ```shell
@@ -25597,12 +25597,28 @@ sudo mkdir /var/log/rabbitmq/
 sudo mkdir /home/rabbitmq/
 sudo chown -R rabbitmq:root /opt/apps/rabbitmq
 sudo chown -R rabbitmq:root /var/log/rabbitmq
-sudo chown -R rabbitmq:root /home/rabbitmq/
+sudo chown -R rabbitmq:root /home/rabbitmq
 ```
 
 
 
 #### 服务管理
+
+手动
+
+```shell
+# cd /opt/apps/rabbitmq
+# 启动
+sudo -u rabbitmq nohup /opt/apps/rabbitmq/sbin/rabbitmq-server
+
+# 后台启动
+sudo -u rabbitmq rabbitmq-server -detached
+
+ps aux | grep 'rabbitmq'
+sudo kill -9 PID
+```
+
+
 
 自动
 
@@ -25612,27 +25628,9 @@ sudo chown -R rabbitmq:root /home/rabbitmq/
 
 
 
-启动之后在浏览器打开[链接](http://localhost:8848/nacos)，默认用户名/密码是 nacos/nacos 。
+启动之后在浏览器打开[链接](http://localhost:15672/)，默认用户名/密码是 geust/geust 。
 
-```shell
-# 将 rabbitmq-server 进程放入系统进程中
-sudo ln -s /opt/apps/rabbitmq/sbin/rabbitmq-server /etc/init.d/rabbitmq-server
-sudo ln -s /opt/apps/rabbitmq/sbin/rabbitmq-env /etc/init.d/rabbitmq-env
-sudo ln -s /opt/apps/rabbitmq/sbin/rabbitmq-rel /etc/init.d/rabbitmq-rel
-# 注册服务
-sudo update-rc.d rabbitmq-server defaults
-
-# 启动、停止、重新启动 rabbitmq-server 服务
-sudo service rabbitmq-server start
-sudo service rabbitmq-server stop
-sudo service rabbitmq-server restart
-sudo service rabbitmq-server status
-# 或
-sudo systemctl start rabbitmq-server.service
-sudo systemctl stop rabbitmq-server.service
-sudo systemctl restart rabbitmq-server.service
-sudo systemctl status rabbitmq-server.service
-```
+使用默认的用户 guest / guest （此也为管理员用户）登陆，会发现无法登陆，报错：User can only log in via localhost。那是因为默认是限制了guest用户只能在本机登陆，也就是只能登陆 localhost:15672。可以通过修改配置文件rabbitmq.conf，取消这个限制： loopback_users 这个项就是控制访问的，如果只是取消 guest 用户的话，只需要 loopback_users.guest = false 即可。
 
 
 
@@ -25648,47 +25646,53 @@ sudo systemctl status rabbitmq-server.service
 
 #### 常用命令行操作
 
-**服务启动停止：**
+```shell
+# 启动服务
+rabbitmq-server
+# 后台启动服务
+rabbitmq-server -detached
+# 停止服务
+rabbitmqctl stop
 
-启动： rabbitmq-server -detached
+## 插件管理
+# 插件列表
+rabbitmq-plugins list 
+# 启动插件 （XXX为插件名）
+rabbitmq-plugins enable XXX
+# 停用插件
+rabbitmq-plugins disable XXX
 
-停止： rabbitmqctl stop
+## 用户管理
+# 添加用户
+rabbitmqctl add_user username password
+# 删除用户
+rabbitmqctl delete_user username
+# 修改密码
+rabbitmqctl change_password username newpassword
+# 设置用户角色
+rabbitmqctl set_user_tags username tag
+# 用户设置为管理员
+rabbitmqctl set_user_tags username administrator
+# 列出用户
+rabbitmqctl list_users
 
-**插件管理：**
+## 权限管理
+# 列出所有用户权限
+rabbitmqctl list_permissions
+# 查看制定用户权限
+rabbitmqctl list_user_permissions username
+# 清除用户权限
+rabbitmqctl clear_permissions [-p vhostpath] username
+# 设置用户权限
+# conf: 一个正则匹配哪些资源能被该用户访问
+# write：一个正则匹配哪些资源能被该用户写入
+# read：一个正则匹配哪些资源能被该用户读取
+rabbitmqctl set_permissions [-p vhostpath] username conf write read
+# 设置读写权限
+rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
+```
 
-插件列表： rabbitmq-plugins list 
 
-启动插件： rabbitmq-plugins enable XXX  （XXX为插件名）
-
-停用插件： rabbitmq-plugins disable XXX
-
-**用户管理：**
-
-添加用户： rabbitmqctl add_user username password
-
-删除用户： rabbitmqctl delete_user username
-
-修改密码： rabbitmqctl change_password username newpassword
-
-设置用户角色： rabbitmqctl set_user_tags username tag
-
-列出用户： rabbitmqctl list_users
-
-**权限管理：**
-
-列出所有用户权限： rabbitmqctl list_permissions
-
-查看制定用户权限： rabbitmqctl list_user_permissions username
-
-清除用户权限： rabbitmqctl clear_permissions [-p vhostpath] username
-
-设置用户权限： rabbitmqctl set_permissions [-p vhostpath] username conf write read
-
-​             conf: 一个正则匹配哪些资源能被该用户访问
-
-​             write：一个正则匹配哪些资源能被该用户写入
-
-​             read：一个正则匹配哪些资源能被该用户读取
 
 
 
