--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -25561,7 +25561,7 @@ rabbitmq-plugins enable rabbitmq_management
 
 #### 配置
 
-etc/rabbitmq/rabbitmq.conf
+/opt/apps/rabbitmq/etc/rabbitmq/rabbitmq.conf
 
 默认 rabbitmq 是没有配置文件的，需要去官方 github上，复制一个配置文件模版过来。
 
@@ -25698,7 +25698,21 @@ rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 
 ### 集群
 
-https://www.jianshu.com/p/b7cc32b94d2a
+
+
+#### Keepalived
+
+[HAProxy+Keepalived搭建RabbitMQ高可用集群 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/345479364)
+
+
+
+#### HAPRoxy
+
+[HAProxy+Keepalived搭建RabbitMQ高可用集群 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/345479364)
+
+[RabbitMQ集群架构-3、Haproxy - 简书 (jianshu.com)](https://www.jianshu.com/p/6f22117f4ab0)
+
+
 
 
 
