--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -1514,7 +1514,16 @@ ACPI BIOS Error (bug): Could not resolve symbol [_SB.PCI0.GP17.VGA.LCD._BCM.AFN7
 
 
 
+## 编译遇到的错误
 
+```shell
+# fatal error: zlib.h: 没有那个文件或目录
+sudo apt install zlib1g-dev
+# fatal error: pcre.h: 没有那个文件或目录
+sudo apt install libpcre3-dev
+# fatal error: openssl/bn.h: 没有那个文件或目录
+sudo apt install libssl-dev
+```
 
 
 
@@ -25706,7 +25715,87 @@ rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 
 
 
-#### HAPRoxy
+#### HAProxy
+
+##### 安装配置部署管理
+
+###### 安装
+
+```shell
+wget -c https://www.haproxy.org/download/2.8/src/haproxy-2.8.3.tar.gz
+sudo tar -zxvf haproxy-2.8.3.tar.gz -C /opt/apps
+
+cd /opt/apps/haproxy-2.8.3
+sudo make ARCH=x86_64 TARGET=linux-glibc USE_PCRE=1 USE_OPENSSL=1 USE_ZLIB=1 PREFIX=/opt/apps/haproxy
+# ARCH=x86_64 #CPU架构，arch命令查看
+# TARGET=linux-glibc #通用linux内核
+# USE_PCRE=1 #PCRE支持正则表达式，用于用户请求的uri
+# USE_OPENSSL=1 #https，证书
+# USE_ZLIB=1 #开启压缩
+# USE_SYSTEMD=1 #使用systemd启动haproxy主进程
+# USE_CPU_AFFINITY=1 #CPU亲和性，让haproxy指定的进程工作在指定的CPU核心上
+# USE_LUA=1 LUA_INC=/usr/local/src/lua-5.3.5/src LUA_LIB=/usr/local/src/lua-5.3.5/src #开启lua，及lua和lua库所在路径
+# PREFIX=/opt/apps/haproxy #指定安装路径
+
+sudo make install PREFIX=/opt/apps/haproxy
+
+sudo rm -r /opt/apps/haproxy-2.8.3
+```
+
+
+
+###### 配置
+
+[/opt/apps/haproxy/haproxy.cfg](../files/config/haproxy.cfg)
+
+
+
+###### 创建用户（组）
+
+```shell
+sudo groupadd -r apps
+sudo useradd -r -g apps -s /bin/false haproxy
+
+sudo mkdir /opt/temp/haproxy/
+sudo touch /opt/temp/haproxy/haproxy.pid
+sudo mkdir /var/log/haproxy/
+sudo chown -R haproxy:root /opt/apps/haproxy
+sudo chown -R haproxy:root /opt/temp/haproxy
+sudo chown -R haproxy:root /var/log/haproxy
+```
+
+
+
+###### 服务管理
+
+手动
+
+```shell
+# 启动
+sudo /opt/apps/haproxy/sbin/haproxy -f /opt/apps/haproxy/haproxy.cfg
+
+ps aux | grep 'haproxy'
+# 或者
+cat /opt/temp/haproxy/haproxy.pid
+
+sudo kill -9 PID
+```
+
+
+
+自动
+
+编写[脚本](../files/scripts/server/haproxy.server)文件放在 base_dir 目录下 `/opt/apps/haproxy/haproxy.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+
+
+
+启动之后在浏览器打开[链接](http://localhost:15672/)，默认用户名/密码是 geust/geust 。
+
+使用默认的用户 guest / guest （此也为管理员用户）登陆，会发现无法登陆，报错：User can only log in via localhost。那是因为默认是限制了guest用户只能在本机登陆，也就是只能登陆 localhost:15672。可以通过修改配置文件rabbitmq.conf，取消这个限制： loopback_users 这个项就是控制访问的，如果只是取消 guest 用户的话，只需要 loopback_users.guest = false 即可。
+
+
 
 [HAProxy+Keepalived搭建RabbitMQ高可用集群 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/345479364)
 
