--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -25713,9 +25713,125 @@ rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 
 [HAProxy+Keepalived搭建RabbitMQ高可用集群 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/345479364)
 
+[debian中keepalived搭建_debian11 安装keepalived-CSDN博客](https://blog.csdn.net/weixin_44298261/article/details/112056315)
+
+##### 安装配置部署管理
+
+###### 安装
+
+[Keepalived for Linux](https://www.keepalived.org/download.html)
+
+```shell
+wget -c https://www.keepalived.org/software/keepalived-2.2.8.tar.gz
+sudo tar -zxvf keepalived-2.2.8.tar.gz -C /opt/apps/
+cd /opt/apps/keepalived-2.2.8
+sudo apt update
+sudo apt install curl gcc libssl-dev libnl-3-dev libnl-genl-3-dev libsnmp-dev
+sudo ./configure --prefix=/opt/apps/keepalived
+sudo make
+sudo make install
+sudo rm -r /opt/apps/keepalived-2.2.8
+```
+
+
+
+###### 配置
+
+[keepalived.conf.sample](../files/config/keepalived.conf.sample)
+
+[keepalived.conf](../files/config/keepalived.conf)
+
+[check_haproxy.sh](../files/scripts/check_haproxy.sh)
+
+
+
+主备配置 router_id、vrrp_instance state、priority 应要不同
+
+
+
+###### 创建用户（组）
+
+```shell
+sudo groupadd -r apps
+sudo useradd -r -g apps -s /bin/false keepalived
+
+sudo mkdir /opt/temp/keepalived/
+sudo touch /opt/temp/keepalived/keepalived.pid
+sudo mkdir /var/log/keepalived/
+sudo chown -R keepalived:root /opt/apps/keepalived
+sudo chown -R keepalived:root /opt/temp/keepalived
+sudo chown -R keepalived:root /var/log/keepalived
+sudo chmod +x /opt/apps/keepalived/check_haproxy.sh
+```
+
+
+
+###### 服务管理
+
+手动
+
+```shell
+# 查看启动参数
+sudo /opt/apps/keepalived/sbin/keepalived --help
+#   -f, --use-file=FILE          Use the specified configuration file
+#                                 default '/opt/apps/keepalived/etc/keepalived/keepalived.conf'
+#                                      or '/etc/keepalived/keepalived.conf'
+#   -P, --vrrp                   Only run with VRRP subsystem
+#   -C, --check                  Only run with Health-checker subsystem
+#       --all                    Force all child processes to run, even if have no configuration
+#   -l, --log-console            Log messages to local console
+#   -D, --log-detail             Detailed log messages
+#   -S, --log-facility=([0-7]|local[0-7]|user|daemon)
+#                                Set syslog facility to LOG_LOCAL[0-7], user or daemon (default)
+#   -G, --no-syslog              Don't log via syslog
+#   -u, --umask=MASK             umask for file creation (in numeric form)
+#   -X, --release-vips           Drop VIP on transition from signal.
+#   -V, --dont-release-vrrp      Don't remove VRRP VIPs and VROUTEs on daemon stop
+#   -I, --dont-release-ipvs      Don't remove IPVS topology on daemon stop
+#   -R, --dont-respawn           Don't respawn child processes
+#   -n, --dont-fork              Don't fork the daemon process
+#   -d, --dump-conf              Dump the configuration data
+#   -p, --pid=FILE               Use specified pidfile for parent process
+#   -r, --vrrp_pid=FILE          Use specified pidfile for VRRP child process
+#   -T, --genhash                Enter into genhash utility mode (this should be the first option used).
+#   -c, --checkers_pid=FILE      Use specified pidfile for checkers child process
+#   -a, --address-monitoring     Report all address additions/deletions notified via netlink
+#   -s, --namespace=NAME         Run in network namespace NAME (overrides config)
+#   -m, --core-dump              Produce core dump if terminate abnormally
+#   -M, --core-dump-pattern=PATN Also set /proc/sys/kernel/core_pattern to PATN (default 'core')
+#   -e, --all-config             Error if any configuration file missing (same as includet)
+#   -i, --config-id id           Skip any configuration lines beginning '@' that don't match id
+#                                 or any lines beginning @^ that do match.
+#                                 The config-id defaults to the node name if option not used
+#       --signum=SIGFUNC         Return signal number for STOP, RELOAD, DATA, STATS, STATS_CLEAR
+#   -t, --config-test[=LOG_FILE] Check the configuration for obvious errors, output to
+#                                 stderr by default
+#   -v, --version                Display the version number
+#   -h, --help                   Display this help message
+  
+# 启动
+bash -c 'sudo -u keepalived /opt/apps/keepalived/sbin/keepalived -f /opt/apps/keepalived/etc/keepalived/keepalived.conf -p /opt/temp/keepalived/keepalived.pid -D'
+
+ps aux | grep 'keepalived'
+# 或者
+cat /opt/temp/keepalived/keepalived.pid
+
+sudo kill -9 PID
+```
+
+
+
+自动
+
+编写[脚本](../files/scripts/server/keepalived.server)文件放在 base_dir 目录下 `/opt/apps/keepalived/keepalived.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+
 
 
 #### HAProxy
+
+[RabbitMQ集群架构-3、Haproxy - 简书 (jianshu.com)](https://www.jianshu.com/p/6f22117f4ab0)
 
 ##### 安装配置部署管理
 
@@ -25797,9 +25913,7 @@ sudo kill -9 PID
 
 
 
-[HAProxy+Keepalived搭建RabbitMQ高可用集群 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/345479364)
 
-[RabbitMQ集群架构-3、Haproxy - 简书 (jianshu.com)](https://www.jianshu.com/p/6f22117f4ab0)
 
 
 
