--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -25722,15 +25722,15 @@ rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 [Keepalived for Linux](https://www.keepalived.org/download.html)
 
 ```shell
-wget -c https://www.keepalived.org/software/keepalived-2.2.8.tar.gz
-sudo tar -zxvf keepalived-2.2.8.tar.gz -C /opt/apps/
-cd /opt/apps/keepalived-2.2.8
+wget -c https://www.keepalived.org/software/keepalived-2.2.7.tar.gz
+sudo tar -zxvf keepalived-2.2.7.tar.gz -C /opt/apps/
+cd /opt/apps/keepalived-2.2.7
 sudo apt update
-sudo apt install curl gcc libssl-dev libnl-3-dev libnl-genl-3-dev libsnmp-dev
+sudo apt install curl gcc libssl-dev libnl-3-dev libnl-genl-3-dev libnl-route-3-dev libnfnetlink-dev libsnmp-dev
 sudo ./configure --prefix=/opt/apps/keepalived
 sudo make
 sudo make install
-sudo rm -r /opt/apps/keepalived-2.2.8
+sudo rm -r /opt/apps/keepalived-2.2.7
 ```
 
 
@@ -25757,6 +25757,7 @@ sudo useradd -r -g apps -s /bin/false keepalived
 
 sudo mkdir /opt/temp/keepalived/
 sudo touch /opt/temp/keepalived/keepalived.pid
+sudo touch /opt/temp/keepalived/keepalived.vrrp.pid
 sudo mkdir /var/log/keepalived/
 sudo chown -R keepalived:root /opt/apps/keepalived
 sudo chown -R keepalived:root /opt/temp/keepalived
@@ -25810,13 +25811,16 @@ sudo /opt/apps/keepalived/sbin/keepalived --help
 #   -h, --help                   Display this help message
   
 # 启动
-bash -c 'sudo -u keepalived /opt/apps/keepalived/sbin/keepalived -f /opt/apps/keepalived/etc/keepalived/keepalived.conf -p /opt/temp/keepalived/keepalived.pid -D'
+bash -c 'sudo -u keepalived /opt/apps/keepalived/sbin/keepalived -f /opt/apps/keepalived/etc/keepalived/keepalived.conf -p /opt/temp/keepalived/keepalived.pid -r /opt/temp/keepalived/keepalived.vrrp.pid -D -S 0'
 
 ps aux | grep 'keepalived'
 # 或者
 cat /opt/temp/keepalived/keepalived.pid
 
 sudo kill -9 PID
+
+sudo cat /var/log/local.0.log
+sudo cat /var/log/user.log
 ```
 
 
